# make-cpan-dist

./: .gitignore  ChangeLog  Makefile.am  README.md  README.md.in  bootstrap  build  build-github  buildspec-example.yml  configure.ac  directories.inc  make-cpan-dist.spec.in  requires
.github/workflows/: build.yml
cpan/: .gitignore  Makefile  Makefile.am  README.md  build-requires  buildspec-file-process.yml  buildspec.yml  requires  test-requires
src/main/perl/lib/: Makefile.am  README.md
src/main/perl/lib/CPAN/: Maker.pm.in
src/main/perl/lib/CPAN/Maker/: Constants.pm.in  Utils.pm.in
src/main/perl/lib/File/: Process.pm.in
